[gd_scene load_steps=4 format=3 uid="uid://ccyl4sjq5dh06"]

[ext_resource type="Script" path="res://scripts/ui/PowerUpMenu/StaffPowerupSlot.gd" id="1_1fqdo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xop30"]
bg_color = Color(0.886275, 0.913725, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkqma"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="StaffPowerupSlot" type="AspectRatioContainer"]
z_index = 1
size_flags_horizontal = 3
script = ExtResource("1_1fqdo")

[node name="FocusHighlightPanel" type="Panel" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xop30")
metadata/_edit_use_anchors_ = true

[node name="BackgroundPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_xkqma")
metadata/_edit_use_anchors_ = true

[node name="EquippedPowerupTexture" type="TextureRect" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0588235
anchor_top = 0.0588235
anchor_right = 0.941176
anchor_bottom = 0.941176
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="EquippedPowerupButton" type="Button" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="focus_entered" from="BackgroundPanel/EquippedPowerupButton" to="." method="_on_equipped_powerup_button_focus_entered"]
[connection signal="focus_exited" from="BackgroundPanel/EquippedPowerupButton" to="." method="_on_equipped_powerup_button_focus_exited"]
